# mcp-internet-server

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  run_test.py  server.py
.github/workflows/: ci.yml
tests/: test_server.py  test_server_async.py  test_server_negative.py  test_server_observability.py
