[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-internet-server"
version = "0.1.0"
description = "MCP tools to search and fetch web content with SSRF protections"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
  "fastmcp>=0.1.0",
  "httpx>=0.23.0",
  "beautifulsoup4>=4.12.0",
  "ddgs",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
]

[tool.setuptools]
package-dir = {"" = ""}
